tests/pass/test-pow2.mc
int main() {
    int i;
    for (i = 0; i < 10; i = i + 1)
        printf("%d\n", 2 ** i);
    return 0;
}
